--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="Calculator">
 
             <!-- <button type="button" class="btn operation" onclick="clean()">AC</button> -->
-            <button type="button" class="btn operation" onclick="changeToRad()">Rad</button>
-            <button type="button" class="btn operation" onclick="changeToDeg()">Deg</button>
+            <button type="button" class="btn operation" onclick="changeToRad()" id="Rad">Rad</button>
+            <button type="button" class="btn operation" onclick="changeToDeg()" id="Deg">Deg</button>
             <button type="button" class="btn operation" value="!">x!</button>
             <button type="button" class="btn operation" value="(" onclick="checkBrackets(1)">(</button>
             <button type="button" class="btn operation" onclick="checkBrackets(-1)">)</button>
