--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
             <button type="button" class="btn operation" value="Ans">Ans</button>
             <button type="button" class="btn operation" value="E">EXP</button>
-            <button type="button" class="btn operation" value="^">^</button>
+            <button type="button" class="btn operation" value="^(" onclick="checkBrackets(1)">^</button>
             <button type="button" class="btn number" value="0">0</button>
             <button type="button" class="btn number" value=".">.</button>
             <button type="button" id="equal" class="btn operation" onclick="equal()">=</button>
