--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button type="button" class="btn operation" value="(" onclick="checkBrackets(1)">(</button>
             <button type="button" class="btn operation" onclick="checkBrackets(-1)">)</button>
             <button type="button" class="btn operation" value="%">%</button>
-            <button type="button" class="btn operation" onclick="undo()">CE</button>
+            <button type="button" class="btn operation" onclick="undo()" id="Delete">CE</button>
 
             <button type="button" class="btn operation">lnv</button>
             <button type="button" class="btn operation" value="sin(" onclick="checkBrackets(1)">sin</button>
